# HydraJWT

./: CMakeLists.txt  README.md
include/hydrajwt/: hydra_core.h  hydra_error.h  hydra_head.h  hydra_token.h  phi_utils.h
include/hydrajwt/heads/: head_ecdsa.h  head_falcon.h  head_mldsa.h  head_phi_hmac.h  head_schnorr.h  head_slhdsa.h
src/core/: hydra_core.cpp  hydra_token.cpp
src/heads/: head_ecdsa.cpp  head_falcon.cpp  head_mldsa.cpp  head_phi_hmac.cpp  head_schnorr.cpp  head_slhdsa.cpp
src/utils/: phi_utils.cpp
tests/: test_full_hydra.cpp  test_schnorr_head.cpp
